--- a/estilos/style.css
+++ b/estilos/style.css
@@ -34,3 +34,11 @@ section#telefone {
     
 
 }
+
+iframe#tela {
+    position: relative;
+    top: 81px;
+    left: 23px;
+    width: 265px;
+    height: 470px;
+}
