--- a/estilos/style.css
+++ b/estilos/style.css
@@ -42,3 +42,24 @@ iframe#tela {
     width: 265px;
     height: 470px;
 }
+
+section#redes-sociais{
+    text-align: right;
+}
+
+
+section#redes-sociais img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.438);
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover{
+    scale: 115%;
+    border: 2px solid rgba(255, 255, 255, 0.493);
+    transform: translate(-3px, -3px);    
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.493);
+    transition: transform .3s, border 0.2s, box-shadow 0.2s, scale 0.5s;
+}
